--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Niraj </span><br> MERN Stack Developer</h1>
 
-                    <a href="https://drive.google.com/file/d/1YH1XYVY0ImbxBv7EUfmM7eCNHUTpRPqb/view?usp=share_link" class="button">Resume</a>
+                    <a href="https://drive.google.com/file/d/1_vyY-ThFD4jnX-A7k9MLwCaQ-9vruM0n/view?usp=sharing" class="button">Resume</a>
                 </div>
 
                 <div class="home__social">
