--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <p class="about__text">
                             Hello! I am NIRAJ PARDHI a Full-stack web development student from Odin School.
                              With an experience in implementing MERN stack, I am looking forward to work as a developer and create meaningful products. 
-                             My experience at Masai School was extremely enriching. I implemented HTML, CSS, Javascript, Mongodb, Node.js, Express in my projects.
+                             My experience at Odin School was extremely enriching. I implemented HTML, CSS, Javascript, Mongodb, Node.js, Express in my projects.
                              In addition, I sharpened my creativity, problem-solving and collaboration skills.
                              Now, I look forward to utilizing my skills in building user-centric products that challenge my abilities.
                         </p>           
